5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1670_1397.log
== TEST (2019-04-16 19:25:56) 
-- CODE:
a=int(inpput("area a ser fertilizada(em hectares)"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=int(inpput("area a ser fertilizada(em hectares)"))
NameError: name 'inpput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:25:57) 
-- CODE:
a=int(inpput("area a ser fertilizada(em hectares)"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=int(inpput("area a ser fertilizada(em hectares)"))
NameError: name 'inpput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:26:04) 
-- CODE:
a=int(inpput("area a ser fertilizada"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=int(inpput("area a ser fertilizada"))
NameError: name 'inpput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:26:04) 
-- CODE:
a=int(inpput("area a ser fertilizada"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=int(inpput("area a ser fertilizada"))
NameError: name 'inpput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:04) 
-- CODE:
a=int(inpput("area a ser fertilizada"))
-- EXECUTION TIME:
0.107726
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/1397/main.py", line 1, in <module>
    a=int(inpput("area a ser fertilizada"))
NameError: name 'inpput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:26:05) 
-- CODE:
a=int(inpput("area a ser fertilizada"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=int(inpput("area a ser fertilizada"))
NameError: name 'inpput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:26:15) 
-- CODE:
a=int(inpput("area a ser fertilizada":))
-- ERROR:
File "XXXX", line 1
    a=int(inpput("area a ser fertilizada":))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:26:27) 
-- CODE:
a=int(inpput("area a ser fertilizada:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=int(inpput("area a ser fertilizada:"))
NameError: name 'inpput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
